Module25: 7 types of Handler | onclick function | Custom function name and with id | Anonymous function | addEventListener

--- a/milestone-module/milestone05/module25-DOM-events/01event.html
+++ b/milestone-module/milestone05/module25-DOM-events/01event.html
@@ -20,8 +20,39 @@
         <h1 onclick="console.log('h1 is clicked'); alert('Masud, tumi valo oy jau.')">Event niye Clickbaji</h1>
         <button onclick="alert(7)">Click Me 1</button>
         <button onclick="console.log(7)">Click Me 2</button>
+        <br><br>
 
+        <!-- 25.2 Add onclick handler directly or via javascript -->
+        <!-- 7 types of click handler -->
 
+        <!-- SystemNumber-01 | onclick function -->
+        <button onclick="document.body.style.backgroundColor='yellow'">Click Me: Yellow</button>
+
+        <!-- SystemNumber-02 | Custom function name -->
+        <button onclick="makeRed()">Click Me: Red</button>
+
+        <!-- SystemNumber-03 | custom function name with id -->
+        <button id="make-blue-button">Click Me: Blue</button>
+
+        <!-- 25.3 Different ways to use addEventListener on a button -->
+
+        <!-- SystemNumber-04 | Anonymous Function with id -->
+        <button id="make-green-button">Click Me: Green</button>
+
+        <!-- SystemNumber-05 | addEventListener -->
+        <button id="make-goldenrod">Click Me: Golden Rod</button>
+
+        <!-- SystemNumber-06 | addEventListener -->
+        <button id="make-hotpink">Click Me: Hot Pink</button>
+
+        <!-- SystemNumber-07 | addEventListener -->
+        <button id="make-lightblue">Click Me: Light Blue</button>
+
+        <script>
+            
+        </script>
+
+        <script src="js/01event.js"></script>
 
     </main>
 </body>
