Module25: All page are linked now

--- a/milestone-module/milestone05/module25-DOM-events/01event.html
+++ b/milestone-module/milestone05/module25-DOM-events/01event.html
@@ -6,13 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Events</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <header>
-
+    <header class="header">
+        <!-- nav>ul>li*5>a -->
+        <nav>
+            <ul>
+                <li><a href="./01event.html">Event</a></li>
+                <li><a href="./02event-common.html">Event-Common</a></li>
+                <li><a href="./03comment.html">Comment</a></li>
+                <li><a href="./04more-events.html">More-Events</a></li>
+                <li><a href="./05bubble.html">Bubble</a></li>
+                <li><a href="./06delegate.html">Delegate</a></li>
+                <li><a href="./07summary.html">Summary</a></li>
+            </ul>
+        </nav>
+        <hr> <br>
     </header>
+
     <main>
+
         <!-- 25.1 What is Event, different types of event in web -->
 
         <!-- DOM event is a signal by which we can understand that something is happing or happend and This signal is happend by user interactions or browser -->
@@ -48,13 +63,14 @@
         <!-- SystemNumber-07 | addEventListener -->
         <button id="make-lightblue">Click Me: Light Blue</button>
 
-        <script>
-            
-        </script>
-
-        <script src="js/01event.js"></script>
-
     </main>
+
+
+    <script>
+
+    </script>
+
+    <script src="js/01event.js"></script>
 </body>
 
 </html>
