--- a/milestone-module/milestone05/module25-DOM-events/02event-common.html
+++ b/milestone-module/milestone05/module25-DOM-events/02event-common.html
@@ -5,12 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-
+    <header class="header">
+        <!-- nav>ul>li*5>a -->
+        <nav>
+            <ul>
+                <li><a href="./01event.html">Event</a></li>
+                <li><a href="./02event-common.html">Event-Common</a></li>
+                <li><a href="./03comment.html">Comment</a></li>
+                <li><a href="./04more-events.html">More-Events</a></li>
+                <li><a href="./05bubble.html">Bubble</a></li>
+                <li><a href="./06delegate.html">Delegate</a></li>
+                <li><a href="./07summary.html">Summary</a></li>
+            </ul>
+        </nav>
+        <hr> <br>
     </header>
+
     <main>
+
         <!-- 25.4 Most common ways to set Event Handers -->
 
         <p id="clicking-method"></p>
@@ -19,32 +34,32 @@
         <button onclick="handleJustFuctionClick()">Just function</button>
         <button id="handle-event">Direct add Event</button>
 
-
-        <script>
-            // Using function & Direct
-            // Using function
-            function handleJustFuctionClick() {
-                const p = document.getElementById('clicking-method');
-                p.innerText = 'Set by using function';
-            }
-            // Direct
-            document.getElementById('handle-event').addEventListener('click', function(){
-                const p = document.getElementById('clicking-method');
-                p.innerText = 'Set by direct add Event Listener';
-            })
-            // Direct with input field 
-            // Anonymous function or Call back function
-            // p --> .innerText | input --> .value 
-            document.getElementById('update-name').addEventListener('click', function(){
-                const nameField = document.getElementById('name-field');
-                // console.log(nameField);
-                console.log(nameField.value);
-                const p = document.getElementById('clicking-method');
-                p.innerText = nameField.value;
-                nameField.value = '';
-            })
-        </script>
-
     </main>
+
+    <script>
+        // Using function & Direct
+        // Using function
+        function handleJustFuctionClick() {
+            const p = document.getElementById('clicking-method');
+            p.innerText = 'Set by using function';
+        }
+        // Direct
+        document.getElementById('handle-event').addEventListener('click', function(){
+            const p = document.getElementById('clicking-method');
+            p.innerText = 'Set by direct add Event Listener';
+        })
+        // Direct with input field 
+        // Anonymous function or Call back function
+        // p --> .innerText | input --> .value 
+        document.getElementById('update-name').addEventListener('click', function(){
+            const nameField = document.getElementById('name-field');
+            // console.log(nameField);
+            console.log(nameField.value);
+            const p = document.getElementById('clicking-method');
+            p.innerText = nameField.value;
+            nameField.value = '';
+        })
+    </script>
+    
 </body>
 </html>
