--- a/milestone-module/milestone05/module25-DOM-events/06delegate.html
+++ b/milestone-module/milestone05/module25-DOM-events/06delegate.html
@@ -1,25 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Event Delegate</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <!-- 25.8 (advanced) Event delegate and benefit of Event bubble -->
 
-    <h2>Event Delegate</h2>
-    <!-- ul#item-container>li.item*6>lorem2 -->
-    <ul id="item-container">
-        <li class="item">Lorem, ipsum.</li>
-        <li class="item">At, dolorem.</li>
-        <li class="item">Est, minima?</li>
-        <li class="item">Molestiae, nisi!</li>
-        <li class="item">Eveniet, quod.</li>
-        <li class="item">Modi, harum!</li>
-    </ul>
-    <button id="add-item">Add Item</button>
+<body>
+    <header class="header">
+        <!-- nav>ul>li*5>a -->
+        <nav>
+            <ul>
+                <li><a href="./01event.html">Event</a></li>
+                <li><a href="./02event-common.html">Event-Common</a></li>
+                <li><a href="./03comment.html">Comment</a></li>
+                <li><a href="./04more-events.html">More-Events</a></li>
+                <li><a href="./05bubble.html">Bubble</a></li>
+                <li><a href="./06delegate.html">Delegate</a></li>
+                <li><a href="./07summary.html">Summary</a></li>
+            </ul>
+        </nav>
+        <hr> <br>
+    </header>
+
+    <main>
+
+        <!-- 25.8 (advanced) Event delegate and benefit of Event bubble -->
+
+        <h2>Event Delegate</h2>
+        <!-- ul#item-container>li.item*6>lorem2 -->
+        <ul id="item-container">
+            <li class="item">Lorem, ipsum.</li>
+            <li class="item">At, dolorem.</li>
+            <li class="item">Est, minima?</li>
+            <li class="item">Molestiae, nisi!</li>
+            <li class="item">Eveniet, quod.</li>
+            <li class="item">Modi, harum!</li>
+        </ul>
+        <button id="add-item">Add Item</button>
+    </main>
+    
     <script>
         // const items = document.getElementsByClassName('item');
         // for (const item of items) {
@@ -40,7 +63,7 @@
         //     });
         // }
 
-        document.getElementById('add-item').addEventListener('click', function(){
+        document.getElementById('add-item').addEventListener('click', function () {
             const li = document.createElement('li');
             li.innerText = 'Brand New Item';
             const parent = document.getElementById('item-container');
@@ -49,7 +72,7 @@
             // This is a bad way to write same code again;
 
             // System-01
-            li.classList.add('item');           
+            li.classList.add('item');
             // const items = document.getElementsByClassName('item');
             // for (const item of items) {
             //     item.addEventListener('click', function (event) {
@@ -60,11 +83,12 @@
         });
 
         // System-02 | Event delegate and benefit of Event bubble
-        document.getElementById('item-container').addEventListener('click', function(event) {
+        document.getElementById('item-container').addEventListener('click', function (event) {
             // console.log(event.target); 
             event.target.parentNode.removeChild(event.target);
         });
     </script>
 
 </body>
+
 </html>
