--- a/milestone-module/milestone05/module25-DOM-events/03comment.html
+++ b/milestone-module/milestone05/module25-DOM-events/03comment.html
@@ -6,23 +6,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Comment</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <!-- 25.5 Create a comment box and display comment -->
+    <header class="header">
+        <!-- nav>ul>li*5>a -->
+        <nav>
+            <ul>
+                <li><a href="./01event.html">Event</a></li>
+                <li><a href="./02event-common.html">Event-Common</a></li>
+                <li><a href="./03comment.html">Comment</a></li>
+                <li><a href="./04more-events.html">More-Events</a></li>
+                <li><a href="./05bubble.html">Bubble</a></li>
+                <li><a href="./06delegate.html">Delegate</a></li>
+                <li><a href="./07summary.html">Summary</a></li>
+            </ul>
+        </nav>
+        <hr> <br>
+    </header>
 
-    <h2>Add your Comment, Please!!</h2>
-    <section>
-        <h4>Your comments</h4>
-        <div id="comment-container">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, doloribus est dicta atque reiciendisfugiat quae nobis consequatur minima nemo! Dolore libero cupiditate recusandae asperiores illo corruptiassumenda, placeat perspiciatis!</p>
-            <p>Aut atque doloremque iure consequuntur labore veniam voluptatem velit aperiam natus cum repudiandaeexcepturi reiciendis in ratione, ut nemo laudantium nihil maxime? Mollitia explicabo unde a debitisnulla voluptatibus ex!</p>
-        </div>
-        <div>
-            <textarea name="" id="new-comment" cols="50" rows="5"></textarea> <br>
-            <button id="submit-comment">Post</button>
-        </div>
-    </section>
+    <main>
+        <!-- 25.5 Create a comment box and display comment -->
+
+        <h2>Add your Comment, Please!!</h2>
+        <section>
+            <h4>Your comments</h4>
+            <div id="comment-container">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, doloribus est dicta atque reiciendisfugiat quae nobis consequatur minima nemo! Dolore libero cupiditate recusandae asperiores illo corruptiassumenda, placeat perspiciatis!</p>
+                <p>Aut atque doloremque iure consequuntur labore veniam voluptatem velit aperiam natus cum repudiandaeexcepturi reiciendis in ratione, ut nemo laudantium nihil maxime? Mollitia explicabo unde a debitisnulla voluptatibus ex!</p>
+            </div>
+            <div>
+                <textarea name="" id="new-comment" cols="50" rows="5"></textarea> <br>
+                <button id="submit-comment">Post</button>
+            </div>
+        </section>
+    </main>
+
     <script>
         // 1. add button event handler
         document.getElementById('submit-comment').addEventListener('click', function () {
