--- a/milestone-module/milestone05/module25-DOM-events/07summary.html
+++ b/milestone-module/milestone05/module25-DOM-events/07summary.html
@@ -6,9 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Event Summary</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <header class="header">
+        <!-- nav>ul>li*5>a -->
+        <nav>
+            <ul>
+                <li><a href="./01event.html">Event</a></li>
+                <li><a href="./02event-common.html">Event-Common</a></li>
+                <li><a href="./03comment.html">Comment</a></li>
+                <li><a href="./04more-events.html">More-Events</a></li>
+                <li><a href="./05bubble.html">Bubble</a></li>
+                <li><a href="./06delegate.html">Delegate</a></li>
+                <li><a href="./07summary.html">Summary</a></li>
+            </ul>
+        </nav>
+        <hr> <br>
+    </header>
 
     <main>
         <!-- 01. We can add event handler in any element | Handler -> click, keydown, keypress, keyup, focus, blur -->
