--- a/milestone-module/milestone05/module26-bank-website/01index.html
+++ b/milestone-module/milestone05/module26-bank-website/01index.html
@@ -22,9 +22,9 @@
         <section class="bg-green-100 w-3/4 mx-auto mt-8 p-8">
             <h3 class="text-2xl mb-4">Please Login</h3>
             <div>
-                <input class="border border-color border-gray-400 rounded block w-3/4 mb-4 px-2" type="text" placeholder="Your Email">
-                <input class="border border-color border-gray-400 rounded block w-3/4 mb-4 px-2" type="password" name="" id="" placeholder="Your Password">
-                <button class="bg-yellow-600 px-4 py-1 rounded text-white font-medium ">Submit</button>
+                <input id="user-email" class="border border-color border-gray-400 rounded block w-3/4 mb-4 px-2" type="text" placeholder="Your Email">
+                <input id="user-password" class="border border-color border-gray-400 rounded block w-3/4 mb-4 px-2" type="password" name="" id="" placeholder="Your Password">
+                <button id="login-submit" class="bg-yellow-600 px-4 py-1 rounded text-white font-medium ">Submit</button>
             </div>
         </section>
 
@@ -33,7 +33,7 @@
 
 
 
-
+    <script src="./js/01bank.js"></script>
 </body>
 
 </html>
