Bank Website Completed

--- a/milestone-module/milestone05/module27-functional-bank/01index.html
+++ b/milestone-module/milestone05/module27-functional-bank/01index.html
@@ -22,8 +22,8 @@
         <section class="bg-green-100 w-3/4 mx-auto mt-8 p-8">
             <h3 class="text-2xl mb-4">Please Login</h3>
             <div>
-                <input id="user-email" class="border border-color border-gray-400 rounded block w-3/4 mb-4 px-2" type="text" placeholder="Your Email">
-                <input id="user-password" class="border border-color border-gray-400 rounded block w-3/4 mb-4 px-2" type="password" name="" id="" placeholder="Your Password">
+                <input id="user-email" class="border border-color border-gray-400 rounded block w-3/4 mb-4 px-2" type="text" placeholder="functionalbank@gmail.com">
+                <input id="user-password" class="border border-color border-gray-400 rounded block w-3/4 mb-4 px-2" type="password" name="" id="" placeholder="secret">
                 <button id="login-submit" class="bg-yellow-600 px-4 py-1 rounded text-white font-medium ">Submit</button>
             </div>
         </section>
