Module27: Modified using DOM by 03domjs

--- a/milestone-module/milestone05/module27-functional-bank/02banking.html
+++ b/milestone-module/milestone05/module27-functional-bank/02banking.html
@@ -54,6 +54,11 @@
 
     </main>
 
+    <script>
+
+    </script>
+
+    <script src="./js/03dom.js"></script>
     <script src="./js/02banking.js"></script>
 </body>
 </html>
