Module15: Modified using DOM | DOM file added

--- a/milestone-module/milestone03/module15-tailwind-css/index2.html
+++ b/milestone-module/milestone03/module15-tailwind-css/index2.html
@@ -29,12 +29,12 @@
         <section class="container mx-auto sm:flex items-center justify-around">
             <div class="space-y-4">
                 <h1 class="text-2xl sm:text-5xl uppercase font-bold">
-                    <span class="text-yellow-400">Be The Penguin</span>
+                    <span id="penguin" class="text-yellow-400">Be The Penguin</span>
                     <br>
                     <span>Of Winter</span>
                 </h1>
                 <p>Lorem ipsum dolor sit amet consectetur.</p>
-                <button class="uppercase bg-[#A4BC46] py-1 sm:py-4 px-3 sm:px-7 font-semibold text-white rounded-xl">
+                <button id="button-head" class="uppercase bg-[#A4BC46] py-1 sm:py-4 px-3 sm:px-7 font-semibold text-white rounded-xl">
                     <svg class="w-6 h-6 inline" fill="none" stroke="currentColor" viewBox="0 0 24 24"
                         xmlns="http://www.w3.org/2000/svg">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -238,6 +238,8 @@
     <footer>
 
     </footer>
+
+    <script src="./dom.js"></script>
 </body>
 
 </html>
