Module9: Modified using DOM

--- a/milestone-module/milestone02/module9-html-css-landing-page/index.html
+++ b/milestone-module/milestone02/module9-html-css-landing-page/index.html
@@ -29,30 +29,30 @@
         <section class="container">
             <!-- Top Player Section -->
             <div class="top-players">
-                <h1 class="section-title">Top Players</h1>
+                <h1 id="section-title1" class="section-title">Top Players</h1>
                 <div class="players">
                     <!-- .player*6>img[src="./images/players/player-$.png"]+h2{top player-$} -->
-                    <div class="player">
+                    <div id="player-1" class="player">
                         <img src="./images/players/player-1.png" alt="">
                         <h2 class="player-name" >John Smith</h2>
                     </div>
-                    <div class="player">
+                    <div id="player-2" class="player">
                         <img src="./images/players/player-2.png" alt="">
                         <h2 class="player-name">Pro Rasel</h2>
                     </div>
-                    <div class="player">
+                    <div id="player-3" class="player">
                         <img src="./images/players/player-3.png" alt="">
                         <h2 class="player-name">Abu Sufian</h2>
                     </div>
-                    <div class="player">
+                    <div id="player-4" class="player">
                         <img src="./images/players/player-4.png" alt="">
                         <h2 class="player-name">Shajedul Karim</h2>
                     </div>
-                    <div class="player">
+                    <div id="player-5" class="player">
                         <img src="./images/players/player-5.png" alt="">
                         <h2 class="player-name">Maruf Ahmed</h2>
                     </div>
-                    <div class="player">
+                    <div id="player-6" class="player">
                         <img src="./images/players/player-6.png" alt="">
                         <h2 class="player-name">Mujahid</h2>
                     </div>
@@ -61,7 +61,7 @@
             <hr>
             <!-- Top Blog Section -->
             <div class="top-blogs">
-                <h1 class="section-title">Top Blogs</h1>
+                <h1 id="section-title2" class="section-title">Top Blogs</h1>
                 <div class="blogs">
                     <div class="blog">
                         <div class="blog-img">
@@ -169,5 +169,6 @@
             </div>
         </section>
     </main>
+    <script src="dom.js"></script>
 </body>
 </html>
