Module29.5: Full Responsive Done

--- a/milestone-module/milestone05/module29.5-practice-and-revision/shopping-cart-design/index.html
+++ b/milestone-module/milestone05/module29.5-practice-and-revision/shopping-cart-design/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopping Cart</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./responsive.css">
 </head>
 
 <body>
@@ -20,14 +21,14 @@
                 </div>
                 <div class="part2">
                     <div class="middle">
-                        <button id="phone-minus">-</button>
-                        <input type="number" name="" id="phone-number" value="1">
-                        <button id="phone-plus">+</button>
+                        <button id="phone-minus1">-</button>
+                        <input type="number" name="number" id="phone-number1" value="1">
+                        <button id="phone-plus1">+</button>
                     </div>
                 </div>
                 <div class="part3">
                     <div class="right">
-                        <h5>$<span id="phone-total">1219</span></h5>
+                        <h5>$<span id="phone-total1">1219</span></h5>
                         <img src="./images/remove.png" alt="">
                     </div>
                 </div>
@@ -39,14 +40,14 @@
                 </div>
                 <div class="part2">
                     <div class="middle">
-                        <button id="phone-minus">-</button>
-                        <input type="number" name="" id="phone-number" value="1">
-                        <button id="phone-plus">+</button>
+                        <button id="phone-minus2">-</button>
+                        <input type="number" name="number" id="phone-number2" value="1">
+                        <button id="phone-plus2">+</button>
                     </div>
                 </div>
                 <div class="part3">
                     <div class="right">
-                        <h5>$<span id="phone-total">59</span></h5>
+                        <h5>$<span id="phone-total2">59</span></h5>
                         <img src="./images/remove.png" alt="">
                     </div>
                 </div>
