Module33: JSON placeholder, GET / fetch data, display data on UI

--- a/milestone-module/milestone06/module33-API-Intro/01index.html
+++ b/milestone-module/milestone06/module33-API-Intro/01index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h2>Hello, API = Application Programming Interface</h2>
+    <button onclick="loadData()">Load Data</button>
 
-    <script src="./js/01index.js"></script>
+    <script src="./js/02api.js"></script>
 </body>
 </html>
