--- a/milestone-module/milestone06/module33-API-Intro/01index.html
+++ b/milestone-module/milestone06/module33-API-Intro/01index.html
@@ -9,6 +9,8 @@
 <body>
     <h2>Hello, API = Application Programming Interface</h2>
     <button onclick="loadData()">Load Data</button>
+    <button onclick="loadUsers()">Load Users</button>
+    <button onclick="loadPosts()">Load Posts</button>
 
     <script src="./js/02api.js"></script>
 </body>
