Module34: Call dynamic API, load dynamic data to display

--- a/milestone-module/milestone06/module34-API-examples/03countries.html
+++ b/milestone-module/milestone06/module34-API-examples/03countries.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="./css/03countries.css">
 </head>
 <body>
+    <section>
+        <h3>Country Details</h3>
+        <div id="country-detail">
+            
+        </div>
+    </section>
     <h1>Display Countries Name</h1>
     <div id="countries">
 
