--- a/milestone-module/milestone06/module34-API-examples/04meal-db.html
+++ b/milestone-module/milestone06/module34-API-examples/04meal-db.html
@@ -13,12 +13,21 @@
 
 <body class="bg-gray">
     <h2 class="text-center text-success">Search your favourite food</h2>
+
+    <!-- meal search area -->
     <div class="input-group mb-3 w-50 mx-auto">
-        <input id="serach-field" type="text" class="form-control" placeholder="Search the food you want" aria-label="Recipient's username"
-            aria-describedby="basic-addon2">
+        <input id="serach-field" type="text" class="form-control" placeholder="Search the food you want"
+            aria-label="Recipient's username" aria-describedby="basic-addon2">
         <button onclick="searchFood()" class="btn btn-outline-secondary" type="button" id="basic-search">Search</button>
     </div>
 
+    <!-- meal search result -->
+    <div id="search-result" class="row row-cols-1 row-cols-md-3 g-4 mx-4">
+        
+    </div>
+
+
+    <!-- include js script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
