--- a/milestone-module/milestone06/module34-API-examples/04meal-db.html
+++ b/milestone-module/milestone06/module34-API-examples/04meal-db.html
@@ -14,6 +14,11 @@
 <body class="bg-gray">
     <h2 class="text-center text-success">Search your favourite food</h2>
 
+    <!-- single meal details -->
+    <div id="meal-details" class="w-50 mx-auto mb-4 g-4">
+        
+    </div>
+
     <!-- meal search area -->
     <div class="input-group mb-3 w-50 mx-auto">
         <input id="serach-field" type="text" class="form-control" placeholder="Search the food you want"
@@ -23,9 +28,8 @@
 
     <!-- meal search result -->
     <div id="search-result" class="row row-cols-1 row-cols-md-3 g-4 mx-4">
-        
-    </div>
 
+    </div>
 
     <!-- include js script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
