--- a/milestone-module/milestone06/module34-API-examples/04meal-db.html
+++ b/milestone-module/milestone06/module34-API-examples/04meal-db.html
@@ -26,6 +26,10 @@
         <button onclick="searchFood()" class="btn btn-outline-secondary" type="button" id="basic-search">Search</button>
     </div>
 
+    <div>
+        <p id="error-message" class="text-danger text-center">Something went wrong please try again later</p>
+    </div>
+
     <!-- meal search result -->
     <div id="search-result" class="row row-cols-1 row-cols-md-3 g-4 mx-4">
 
