Module34.5: Set autoload | Use arrow function and forEach loop

--- a/milestone-module/milestone06/module34.5-recap-and-more-API/01json.html
+++ b/milestone-module/milestone06/module34.5-recap-and-more-API/01json.html
@@ -5,6 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recap and More API Examples</title>
+    <style>
+        .comments-all {
+            border: 2px solid coral;
+            border-radius: 10px;
+            margin: 5px;
+            padding: 10px;
+            text-align: center;
+            background-color: blanchedalmond;
+        }
+    </style>
 </head>
 <body>
     <h1>Recap and More API Examples</h1>
