Explore destructuring and send data to html elements using props

--- a/milestone-module/milestone08/module44-modern-front-end-core-concepts/02rest-countries-recap/index.html
+++ b/milestone-module/milestone08/module44-modern-front-end-core-concepts/02rest-countries-recap/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h2>Rest Countries I am coming to youuuuuu!!!</h2>
+    <h2 title="This is mouseover.">Rest Countries I am coming to youuuuuu!!!</h2>
     <div id="countries" class="countries">
 
     </div>
