--- a/milestone-module/milestone10/module60-responsive-react-website-and-react-recap/01genius-car-services/public/index.html
+++ b/milestone-module/milestone10/module60-responsive-react-website-and-react-recap/01genius-car-services/public/index.html
@@ -27,7 +27,7 @@
     <!-- CSS only | Bootstrap CDN Links -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
-    <title>React App</title>
+    <title>Genius Car Service</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
